act-4/server-envoy-config.yaml
apiVersion: v1
data:
  envoy.yaml: |
    node:
      id: server-app
      cluster: server-app-cluster
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8081 }
        filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificate_sds_secret_configs:
                - name: spiffe_cert
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      transport_api_version: V3
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire_agent
                validation_context_sds_secret_config:
                  name: spiffe_bundle
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      transport_api_version: V3
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire_agent
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: app }
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: app
        type: STATIC
        connect_timeout: 1s
        load_assignment:
          cluster_name: app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 8081 }
      - name: spire_agent
        type: STATIC
        connect_timeout: 1s
        load_assignment:
          cluster_name: spire_agent
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: /run/spire/sockets/agent.sock
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
kind: ConfigMap
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"envoy.yaml":"node:\n  id: server-app\n  cluster: server-app-cluster\nstatic_resources:\n  listeners:\n  - name: listener_0\n    address:\n      socket_address: { address: 0.0.0.0, port_value: 8081 }\n    filter_chains:\n    - transport_socket:\n        name: envoy.transport_sockets.tls\n        typed_config:\n          \"@type\": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext\n          common_tls_context:\n            tls_cer [...]
  creationTimestamp: "2025-07-27T17:47:30Z"
  name: server-envoy-config
  namespace: default
  resourceVersion: "35522"
  uid: 42b6085f-98a9-4810-9de4-322b8e843191
